fix gap

--- a/src/App.css
+++ b/src/App.css
@@ -173,7 +173,7 @@ input {
   background-color: transparent;
   outline: none;
   border: none;
-  color: #ffd0dc;
+  color: #FFF;
   border-bottom: 1px solid #ccc;
   padding: 2rem 0rem;
   transition: all .5s;
@@ -200,7 +200,7 @@ input[type="button"] {
 
 
 input::placeholder {
-  color: #ffd0dc;
+  color: #FFF;
   font-size: 1.1rem;
 
 }
